syntax = "proto3";

package order;

service OrderService {
  rpc ProcessOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string order_id = 1;
  string customer_id = 2;
  repeated string items = 3;
  double total_amount = 4;
}

message OrderResponse {
  string order_id = 1;
  bool success = 2;
  string message = 3;
}